[package]
name = "song-bin"
version = "0.1.0"
edition = "2021"
description = "A sing-box based proxy client with GPUI desktop UI"
license = "Apache-2.0"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
single-instance = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
base64 = "0.22"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
ureq = "3"
urlencoding = "2"
zip = "2"
